# bubo

./: .env_template  .gitignore  Cargo.toml  README.md
crates/admin-api/: Cargo.toml
crates/admin-api/logs/: admin-api.log.2024-08-27
crates/admin-api/src/: lib.rs  main.rs
crates/admin-api/src/controllers/: auth.rs  mod.rs
crates/admin-api/src/controllers/system/: menu.rs  mod.rs  role.rs  user.rs
crates/admin-api/src/models/: menu.rs  mod.rs  role.rs  user.rs
crates/admin-api/src/models/_entities/: admin_menu.rs  admin_role.rs  admin_role_menu.rs  admin_user.rs  admin_user_role.rs  mod.rs  prelude.rs
crates/admin-api/src/views/: menu.rs  mod.rs  role.rs  user.rs
crates/admin-migration/: Cargo.toml
crates/admin-migration/src/: m20220101_000001_create_table.rs  main.rs
crates/bubo/: Cargo.toml
crates/bubo/src/: lib.rs  server.rs
crates/bubo/src/controllers/: mod.rs
crates/bubo/src/controllers/middlewares/: auth.rs
crates/bubo/src/utils/: database.rs  error.rs  log.rs  mod.rs  prometheus.rs  redis.rs  serde.rs  snowflake.rs  time.rs  validator.rs
crates/bubo/src/views/: auth.rs
